@@ -14,6 +14,6 @@
 <tr><td valign="top" class="label">Description</td>
 <td class="desc">Returns a binary flag (true/false) that will signal if we have read to the End Of File (EOF).</td></tr>
 <tr><td valign="top" class="label">See Also</td>
-<td class="seealso">Close, Open, Read, Readline, Reset, Write, Writeline</td></tr>
+<td class="seealso">Close, Open, Read, Readline, Reset, Write, Writeline, Exists, Seek, Size</td></tr>
 </table>
 
