@@ -16,6 +16,6 @@
 <tr><td valign="top" class="label">Note</td>
 <td class="note">Only one file may be open at a time.  Opening a file while another is already open will close the open file.</td></tr>
 <tr><td valign="top" class="label">See Also</td>
-<td class="seealso">Close, Eof, Read, Readline, Reset, Write, Writeline</td></tr>
+<td class="seealso">Close, Eof, Read, Readline, Reset, Write, Writeline, Exists, Seek, Size</td></tr>
 </table>
 
