@@ -21,6 +21,7 @@
 <a class="cmdnav" target="body" href="Dim.html">Dim</a>
 <a class="cmdnav" target="body" href="End.html">End</a>
 <a class="cmdnav" target="body" href="Eof.html">Eof</a>
+<a class="cmdnav" target="body" href="Exists.html">Exists</a>
 <a class="cmdnav" target="body" href="FastGraphics.html">FastGraphics</a>
 <a class="cmdnav" target="body" href="Float.html">Float</a>
 <a class="cmdnav" target="body" href="Floor.html">Floor</a>
@@ -54,9 +55,11 @@
 <a class="cmdnav" target="body" href="Refresh.html">Refresh</a>
 <a class="cmdnav" target="body" href="Rem.html">Rem</a>
 <a class="cmdnav" target="body" href="Reset.html">Reset</a>
-<a class="cmdnav" target="body" href="Second.html">Second</a>
 <a class="cmdnav" target="body" href="Say.html">Say</a>
+<a class="cmdnav" target="body" href="Second.html">Second</a>
+<a class="cmdnav" target="body" href="Seek.html">Seek</a>
 <a class="cmdnav" target="body" href="Sin.html">Sin</a>
+<a class="cmdnav" target="body" href="Size.html">Size</a>
 <a class="cmdnav" target="body" href="Sound.html">Sound</a>
 <a class="cmdnav" target="body" href="String.html">String</a>
 <a class="cmdnav" target="body" href="Tan.html">Tan</a>
